Now route to notes

--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -1,5 +1,6 @@
 <div class="container addT">
   <div>
+    <h1 style="text-align: center;">Add Your Note</h1>
     <form class="example-form" [formGroup]="myForm">
       <mat-form-field class="example-full-width">
         <mat-label>Title</mat-label>
