--- a/src/app/show-content/show-content.component.html
+++ b/src/app/show-content/show-content.component.html
@@ -1,10 +1,14 @@
-<div *ngIf="isLoading" class="sniper">
+<div *ngIf="!isAccess" class="noData">
+  <h2>Kindly Login/SignUp to add new Notes and Tasks!!</h2>
+  <button class="click" (click)="onNewUser()">Click Here</button>
+</div>
+<div *ngIf="isLoading && isAccess" class="sniper">
     <mat-spinner [diameter]="50"></mat-spinner>
 </div>
-<div *ngIf="cardShow.length === 0 && !isLoading" class="noData">
-  <p>No Data Available</p>
+<div *ngIf="cardShow.length === 0 && !isLoading && isAccess" class="noData">
+  <p>All your Notes are shown here!!</p>
 </div>
-<div *ngIf="!isLoading">
+<div *ngIf="!isLoading && isAccess">
   <div
     *ngFor="let card of cardShow"
     class="col-xs-12 col-md-3 col-sm-6"
