--- a/src/app/show-content/show-content.component.css
+++ b/src/app/show-content/show-content.component.css
@@ -27,8 +27,7 @@
   }
 .noData{
     margin-top: 30px;
-    display: flex;
-    justify-content: center;
+    text-align: center;
 }
 
 .deletebtn{
@@ -39,4 +38,10 @@
     display: flex;
     justify-content: center;
     margin-top: 150px;
+}
+.click{
+  text-decoration: none;
+  cursor: pointer;
+  border: none;
+  background-color: white;
 }
