--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,4 @@
-<div>
-  <header>
-    <div class="overlay">
-      <h1>Doodle Keep</h1>
-      <h3>Keep your To Do(s) and notes with Priority....</h3>
-    </div>
-  </header>
-</div>
+<app-header></app-header>
 <div class="addTask">
   <button mat-raised-button color="primary" (click)="onAddTask()">
     Take a Note..
