--- a/src/app/show-content/show-content.component.html
+++ b/src/app/show-content/show-content.component.html
@@ -2,8 +2,29 @@
   <h2>Kindly Login/SignUp to add new Notes and Tasks!!</h2>
   <button class="click" (click)="onNewUser()">Login to Continue</button>
 </div>
+<div *ngIf="isAccess && !isLoading" class="myfield">
+  <div>
+    <mat-form-field appearance="outline" class="formInput" align="end">
+      <mat-label>Search</mat-label>
+      <mat-icon matPrefix>search</mat-icon>
+      <input matInput #input>
+    </mat-form-field>
+</div>
+<div>
+  <mat-form-field appearance="outline" class="formSelect">
+    <mat-label>Filter</mat-label>
+    <mat-select>
+      <mat-option *ngFor="let val of priorities" [value]="val" (click)="onSelect(val)">
+        {{val}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>  
+</div>
+</div>
+
 <div *ngIf="isLoading && isAccess" class="sniper">
     <mat-spinner [diameter]="50"></mat-spinner>
+    <p class="process">Processing request....</p>
 </div>
 <div *ngIf="cardShow.length === 0 && !isLoading && isAccess" class="noData">
   <p>All your Notes are shown here!!</p>
