--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,11 +1,4 @@
-<div>
-  <header>
-    <div class="overlay">
-      <h1>Doodle Keep</h1>
-      <h3>Keep your To Do(s) and notes with Priority....</h3>
-    </div>
-  </header>
-</div>
+<app-header></app-header>
 <div class="wels"><h1>Welcome</h1></div>
 <div class="intro" *ngIf="!isLoging"><p>Already have an Account? <a (click)="onSwitch()">Login Now</a></p></div>
 <div class="intro" *ngIf="!isLoging"><p style="font-size: 15px;">Create an Account</p></div>
@@ -19,7 +12,7 @@
           type="email"
           matInput
           formControlName="emailAdd"
-          placeholder="Ex. pat@example.com"
+          placeholder="Ex. abc@example.com"
         />
       </mat-form-field>
     </div>
