--- a/src/app/show-content/show-content.component.html
+++ b/src/app/show-content/show-content.component.html
@@ -7,24 +7,28 @@
     <mat-form-field appearance="outline" class="formInput" align="end">
       <mat-label>Search</mat-label>
       <mat-icon matPrefix>search</mat-icon>
-      <input matInput #input>
+      <input matInput #input (keyup)="applyFilter($event)" />
     </mat-form-field>
-</div>
-<div>
-  <mat-form-field appearance="outline" class="formSelect">
-    <mat-label>Filter</mat-label>
-    <mat-select>
-      <mat-option *ngFor="let val of priorities" [value]="val" (click)="onSelect(val)">
-        {{val}}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>  
-</div>
+  </div>
+  <div>
+    <mat-form-field appearance="outline" class="formSelect">
+      <mat-label>Filter</mat-label>
+      <mat-select>
+        <mat-option
+          *ngFor="let val of priorities"
+          [value]="val"
+          (click)="onSelect(val)"
+        >
+          {{ val }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
 </div>
 
 <div *ngIf="isLoading && isAccess" class="sniper">
-    <mat-spinner [diameter]="50"></mat-spinner>
-    <p class="process">Processing request....</p>
+  <mat-spinner [diameter]="50"></mat-spinner>
+  <p class="process">Processing request....</p>
 </div>
 <div *ngIf="cardShow.length === 0 && !isLoading && isAccess" class="noData">
   <p>All your Notes are shown here!!</p>
@@ -44,15 +48,19 @@
       </mat-card-header>
       <mat-card-content class="cardContent">
         <p>{{ card.content }}</p>
-        <hr>
+        <hr />
       </mat-card-content>
       <mat-card-actions>
-        <button mat-stroked-button matTootip="priority" [color]=getColor(card.priority)>
+        <button
+          mat-stroked-button
+          matTootip="priority"
+          [color]="getColor(card.priority)"
+        >
           {{ card.priority }}
         </button>
         <div>
           <button
-          mat-icon-button
+            mat-icon-button
             matTooltip="delete"
             color="warn"
             (click)="onDeleteTask(card.id)"
@@ -61,7 +69,12 @@
           >
             <mat-icon>delete</mat-icon>
           </button>
-          <button mat-icon-button color="primary" aria-label="Example icon button with a home icon" (click)="onEditTask(card.id)">
+          <button
+            mat-icon-button
+            color="primary"
+            aria-label="Example icon button with a home icon"
+            (click)="onEditTask(card.id)"
+          >
             <mat-icon>edit_note</mat-icon>
           </button>
         </div>
