--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -1,56 +1,77 @@
 <div class="container addT">
   <div>
-    <h1 style="text-align: center;">Add Your Note</h1>
+    <h1 style="text-align: center">Add Your Note</h1>
     <form class="example-form" [formGroup]="myForm">
-      <mat-form-field class="example-full-width">
-        <mat-label>Title</mat-label>
-        <input
-          matInput
-          type="text"
-          placeholder="Enter the Title"
-          formControlName="title"
-        />
-      </mat-form-field>
-      <mat-form-field class="example-full-width">
-        <mat-label>Content</mat-label>
-        <input
-          matInput
-          #message
-          maxlength="230"
-          placeholder="Enter the Content"
-          formControlName="content"
-        />
-        <mat-hint align="end">{{ message.value.length }} / 230</mat-hint>
-      </mat-form-field>
-      <mat-form-field appearance="fill">
-        <mat-label>Priority</mat-label>
-        <mat-select formControlName="priority">
-          <mat-option value="High">High</mat-option>
-          <mat-option value="Medium">Medium</mat-option>
-          <mat-option value="Low">Low</mat-option>
-        </mat-select>
-      </mat-form-field>
       <div>
-        <button
-        *ngIf="!isEdit"
-          mat-raised-button
-          color="primary"
-          (click)="onAddingTask()"
-          type="submit"
-          [disabled]="myForm.invalid"
-        >
-          Noted
-        </button>
-        <button
-        *ngIf="isEdit"
-          mat-raised-button
-          color="primary"
-          (click)="onEditingTask()"
-          type="submit"
-          [disabled]="myForm.invalid"
-        >
-          Edit Note
-        </button>
+        <mat-form-field class="example-full-width" appearance="outline">
+          <mat-label>Title</mat-label>
+          <input
+            matInput
+            type="text"
+            placeholder="Enter the Title"
+            formControlName="title"
+          />
+        </mat-form-field>
+        <div class="error">
+          <span
+          *ngIf="
+            myForm.get('title')?.errors &&
+            myForm.get('title')?.hasError('required') &&
+            myForm.get('title')?.touched
+          "
+          >Title is required</span>
+        </div>
+
+        <mat-form-field class="example-full-width" appearance="outline">
+          <mat-label>Content</mat-label>
+          <input
+            matInput
+            #message
+            maxlength="230"
+            placeholder="Enter the Content"
+            formControlName="content"
+          />
+          <mat-hint align="end">{{ message.value.length }} / 230</mat-hint>
+        </mat-form-field>
+        <div class="error">
+          <span
+          *ngIf="
+            myForm.get('content')?.errors &&
+            myForm.get('content')?.hasError('required') &&
+            myForm.get('content')?.touched
+          "
+          >Content is required</span>
+        </div>
+        <mat-form-field appearance="outline">
+          <mat-label>Priority</mat-label>
+          <mat-select formControlName="priority">
+            <mat-option value="High">High</mat-option>
+            <mat-option value="Medium">Medium</mat-option>
+            <mat-option value="Low">Low</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <div>
+          <button
+            *ngIf="!isEdit"
+            mat-raised-button
+            color="primary"
+            (click)="onAddingTask()"
+            type="submit"
+            [disabled]="myForm.invalid"
+          >
+            Noted
+          </button>
+          <button
+            *ngIf="isEdit"
+            mat-raised-button
+            color="primary"
+            (click)="onEditingTask()"
+            type="submit"
+            [disabled]="myForm.invalid"
+          >
+            Edit Note
+          </button>
+        </div>
       </div>
     </form>
   </div>
