--- a/src/app/welcome/welcome.component.css
+++ b/src/app/welcome/welcome.component.css
@@ -20,3 +20,10 @@
 	text-decoration: none;
 	cursor: pointer;
 }
+.error{
+    font-size: 12px;
+    color: red;
+    margin-top: -15px;
+    padding-left: 2px;
+    transition: .5s;
+}
