--- a/src/app/show-content/show-content.component.html
+++ b/src/app/show-content/show-content.component.html
@@ -27,8 +27,10 @@
 </div>
 
 <div *ngIf="isLoading && isAccess" class="sniper">
-  <mat-spinner [diameter]="50"></mat-spinner>
-  <p class="process">Processing request....</p>
+  <mat-spinner [diameter]="40"></mat-spinner>
+</div>
+<div *ngIf="isLoading && isAccess" class="sniper2">
+    <p class="process">Processing request....</p>
 </div>
 <div *ngIf="cardShow.length === 0 && !isLoading && isAccess" class="noData">
   <p>All your Notes are shown here!!</p>
