--- a/src/app/alert/alert.component.html
+++ b/src/app/alert/alert.component.html
@@ -2,7 +2,7 @@
 <div mat-dialog-content>
   Would you like to delete the Note?
 </div>
-<div mat-dialog-actions>
+<div mat-dialog-actions align="end">
   <button mat-raised-button mat-dialog-close cdkFocusInitial>No</button>
   <button mat-raised-button [mat-dialog-close]="true">Ok</button>
 </div>
